# micro-queue-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  worker.py
app/: auth.py  billing.py  celery_app.py  models.py  settings.py  tasks.py
fixtures/: users.json
tests/: test_api.py
